# ChangeLog for dev-java/quartz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Feb 2009; Alistair Bush <ali_bush@gentoo.org> metadata.xml,
  quartz-1.6.0.ebuild:
  QA Fixes. Drop keywords due to missing deps.

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> quartz-1.6.0.ebuild:
  fixing IUSE repoman warnings

  09 Jun 2007; Vlastimil Babka <caster@gentoo.org> quartz-1.6.0.ebuild:
  Change to jdbc-oracle-bin

  27 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Moved package from java-overlay due to it being incomplete. Unbunlded a ton
  of stuff, and added a bunch of new use flags for optional deps. Still not
  complete and does not merge. Much work left to be done. Struts does not seem
  to be a dep anymore, so it's been temporarily dropped/commented out.

  14 Feb 2007; kiorky <kiorky@cryptelium.net> +quartz-1.5.2.ebuild:
  Bumped to version 1.5.2
  See #166776
