@@ -1,4 +1,4 @@
 DIST quartz-1.6.0.zip 5399882 RMD160 a107c058a06044aa7794b48a48083524d26ae626 SHA1 05db283bf009574294ef4ebab257f6cf1a4c7458 SHA256 475b508ac60c80170e01ff8e3d1b777809fa69542e45470a469fddc3cca19442
-EBUILD quartz-1.6.0.ebuild 4091 RMD160 8dfcff2ec37969f70fa8043ff5aeb946e8f243a9 SHA1 817b657111e97fc298fe6ce5bb98dc15e10badb2 SHA256 fbbcbfda7f383764bdcb1da8bf37eb57a9bf0559ff0b99e6863a985adca031b8
-MISC ChangeLog 802 RMD160 38b80cdb72e6a3ba0ef1689f503deadf51fd0044 SHA1 61d34a16919bfeae043419f22543d719ccb5249a SHA256 5fcb16efaaee0c97ab24d3dbb662b1c6df7608d38d2fbc5924d09109fd42b437
+EBUILD quartz-1.6.0.ebuild 3979 RMD160 c782f2a0d0662336628f4e468d3cf8ebca28ddc0 SHA1 9b2f640653eefdf1741605b249627c63e31f9479 SHA256 fe8bd790612c94f9edd0fe33feac6e17e3340c4c0258682d0dffcfb9f22fce3b
+MISC ChangeLog 1032 RMD160 0c4f9700b0e558a5215451d24f434c1385e73b88 SHA1 bf89b06ce5a6f210c369fcab63fa6ef2ede16e2f SHA256 f5df6896bb7c9b36b79b92bd7dcc7ae2c6aa78b19b210e75b4e5a67d9606646d
 MISC metadata.xml 341 RMD160 3b2595dd90d5576581a7c6ef463787b7855d587d SHA1 4aa356e12e6c7e6cc67fb27f7a49f8c58970fcd2 SHA256 19c6e0872d9e76c3362dfcf3ab297a1baf7f169db38d42fd38707fa493d9de02
